--- a/BlogLibros/templates/BlogLibros/buscarlibro.html
+++ b/BlogLibros/templates/BlogLibros/buscarlibro.html
@@ -5,7 +5,7 @@
 {% block main %}
     <h1 style="color: white"> Que libro desea buscar? <h1> 
 
-    <form action="/BlogLibros/buscar_libro/" method="GET">
+    <form action="buscar_libro" method="GET">
         
         <input type="text" name="librobuscado">
 
