--- a/BlogLibros/templates/BlogLibros/base.html
+++ b/BlogLibros/templates/BlogLibros/base.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Business Casual - Start Bootstrap Theme</title>
+        <title>Mi Blog de Literatura</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -35,6 +35,7 @@
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="cargarlibro">Libros</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="cargarautor">Autor</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="cargarlector">Lectores</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="busquedaLibro">Buscar Libro</a></li>
                     </ul>
                 </div>
             </div>
